--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Victor Lima",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.8.5",
@@ -34,6 +35,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "module-alias": "^2.2.2"
   }
 }
