--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start:local": "ts-node-dev --transpile-only src/index.ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional": "jest --projects ./test --forceExit --runInBand"
+    "test:functional": "jest --projects ./test --forceExit --runInBand",
+    "style:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
+    "style:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "keywords": [
     "nodejs",
@@ -38,6 +40,7 @@
     "@overnightjs/core": "^1.7.6",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "prettier": "^2.7.1"
   }
 }
